// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finds urls 1`] = `
{
  "missing": [
    "http://www.sqlserver.org.au/",
    "http://www.microsoft.com/resources/documentation/windowsnt/4/server/reskit/en-us/reskt4u4/rku4list.mspx?mfr=true",
    "http://blog.spencen.com/",
    "http://www.sqlsnapshots.com/SQLSnapshotsMP3Feed.xml",
    "http://www.sqlserver.org.au/",
  ],
  "replacements": [
    {
      "find": "http://www.microsoft.com/windowsserver2003/technologies/networking/ipsec/default.mspx#EGAA",
      "replace": "http://web.archive.org/web/20170514221808/http://www.microsoft.com:80/windowsserver2003/technologies/networking/ipsec/default.mspx",
    },
    {
      "find": "http://blog.spencen.com/2010/04/06/new-laptop-ndash-sony-z-series.aspx",
      "replace": "http://web.archive.org/web/20140311011355/http://blog.spencen.com:80/2010/04/06/new-laptop-ndash-sony-z-series.aspx",
    },
  ],
}
`;

exports[`finds urls with timestamp 1`] = `
{
  "missing": [
    "http://www.microsoft.com/resources/documentation/windowsnt/4/server/reskit/en-us/reskt4u4/rku4list.mspx?mfr=true",
    "http://blog.spencen.com/",
    "http://www.sqlsnapshots.com/SQLSnapshotsMP3Feed.xml",
    "http://blog.spencen.com/2010/04/06/new-laptop-ndash-sony-z-series.aspx",
  ],
  "replacements": [
    {
      "find": "http://www.sqlserver.org.au/",
      "replace": "http://web.archive.org/web/20090217192805/http://www.sqlserver.org.au:80/",
    },
    {
      "find": "http://www.microsoft.com/windowsserver2003/technologies/networking/ipsec/default.mspx#EGAA",
      "replace": "http://web.archive.org/web/20050404133316/http://www.microsoft.com:80/windowsserver2003/technologies/networking/ipsec/default.mspx",
    },
  ],
}
`;
